--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
     
         {
             "name": "Python Debugger: Current File",
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
+            "console": "integratedTerminal"
+        },
+
+        {
+            "name": "Requirments Tracker",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "RequirementsTracker.py",
             "console": "integratedTerminal"
         }
     ]
