--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
 
+
+        {
+            "name": "Kaiju Champ",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "KaijuChamp.py",
+            "console": "integratedTerminal"
+        },
     
         {
             "name": "Python Debugger: Current File",
